created custom id instead of mongodbs objectid
